WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73378
Accessibility: WebKitTestRunner compile warnings with XCode 3.2
https://bugs.webkit.org/show_bug.cgi?id=73378
Summary
Accessibility: WebKitTestRunner compile warnings with XCode 3.2
Dominic Mazzoni
Reported
2011-11-29 17:20:39 PST
These are tiny and should be easy to fix: Tools/WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm: In copy constructor 'WTR::AccessibilityUIElement::AccessibilityUIElement(const WTR::AccessibilityUIElement&)': Tools/WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:171: warning: base class 'class WTR::JSWrappable' should be explicitly initialized in the copy constructor Tools/WebKitTestRunner/InjectedBundle/AccessibilityTextMarkerRange.cpp: In copy constructor 'WTR::AccessibilityTextMarkerRange::AccessibilityTextMarkerRange(const WTR::AccessibilityTextMarkerRange&)': Tools/WebKitTestRunner/InjectedBundle/AccessibilityTextMarkerRange.cpp:51: warning: base class 'class WTR::JSWrappable' should be explicitly initialized in the copy constructor Tools/WebKitTestRunner/InjectedBundle/AccessibilityTextMarker.cpp: In copy constructor 'WTR::AccessibilityTextMarker::AccessibilityTextMarker(const WTR::AccessibilityTextMarker&)': Tools/WebKitTestRunner/InjectedBundle/AccessibilityTextMarker.cpp:51: warning: base class 'class WTR::JSWrappable' should be explicitly initialized in the copy constructor Tools/WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm: In member function 'WTF::PassRefPtr<WTR::AccessibilityUIElement> WTR::AccessibilityUIElement::verticalScrollbar() const': Tools/WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:1154: warning: control reaches end of non-void function
Attachments
Patch
(3.16 KB, patch)
2011-11-29 17:25 PST
,
Dominic Mazzoni
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dominic Mazzoni
Comment 1
2011-11-29 17:25:08 PST
Created
attachment 117079
[details]
Patch
WebKit Review Bot
Comment 2
2011-12-01 13:13:23 PST
Comment on
attachment 117079
[details]
Patch Clearing flags on attachment: 117079 Committed
r101700
: <
http://trac.webkit.org/changeset/101700
>
WebKit Review Bot
Comment 3
2011-12-01 13:13:27 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug