Fix WebKitTestRunner compile warnings with XCode 3.2 https://bugs.webkit.org/show_bug.cgi?id=73378

Reviewed by Chris Fleizach.

* WebKitTestRunner/InjectedBundle/AccessibilityTextMarker.cpp:
(WTR::AccessibilityTextMarker::AccessibilityTextMarker):
* WebKitTestRunner/InjectedBundle/AccessibilityTextMarkerRange.cpp:
(WTR::AccessibilityTextMarkerRange::AccessibilityTextMarkerRange):
* WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:
(WTR::AccessibilityUIElement::AccessibilityUIElement):
(WTR::AccessibilityUIElement::verticalScrollbar):


Canonical link: https://commits.webkit.org/90171@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101700 268f45cc-cd09-0410-ab3c-d52691b4dbfc